RESOLVED FIXED25180
drawRect() outlines are missing in Chromium
https://bugs.webkit.org/show_bug.cgi?id=25180
Summary drawRect() outlines are missing in Chromium
Stephen White
Reported 2009-04-14 07:16:28 PDT
The stroked outlines for rectangles drawn via PlatformContext::drawRect() in Chromium are missing. This was introduced in https://bugs.webkit.org/show_bug.cgi?id=24662 (r41805), and the affected tests were rebaselined with the outlines missing in http://codereview.chromium.org/46097.
Attachments
Fix for Chromium drawRect() issue. (2.15 KB, patch)
2009-04-14 07:28 PDT, Stephen White
no flags
Slight fix to avoid overdraw. (2.16 KB, patch)
2009-04-14 08:21 PDT, Stephen White
dglazkov: review+
Fixed changelog. (2.21 KB, patch)
2009-04-14 14:13 PDT, Stephen White
dglazkov: review+
Stephen White
Comment 1 2009-04-14 07:28:41 PDT
Created attachment 29466 [details] Fix for Chromium drawRect() issue.
Stephen White
Comment 2 2009-04-14 08:21:31 PDT
Created attachment 29468 [details] Slight fix to avoid overdraw. Slight fix to previous: don't draw corners twice (might cause a problem with alpha on).
Dimitri Glazkov (Google)
Comment 3 2009-04-14 13:47:10 PDT
Comment on attachment 29468 [details] Slight fix to avoid overdraw. Missing bug URL in ChangeLog.
Stephen White
Comment 4 2009-04-14 14:13:41 PDT
Created attachment 29479 [details] Fixed changelog.
Darin Fisher (:fishd, Google)
Comment 5 2009-04-15 11:15:39 PDT
Note You need to log in before you can comment on or make changes to this bug.